@@ -11,6 +11,17 @@ Version 1.5.0current:
   Other changes:
     * Added irc:// to the builtin supported link schemas. You can remove it
       from config.url_schemas in case you have patched it in there.
+    * Added cfg.user_autocreate (default: False). Use True to enable user
+      profile autocreation, e.g. when you use http authentication, so your
+      externally authenticated users don't need to create their moin profile
+      manually. The auth method (see cfg.auth list) must check this setting
+      if it supports auto creation.
+    * Added user_autocreate support for auth.http and auth.ssl_clientcert.
+    * Added "." and "@" to allowed characters in usernames. This is needed
+      e.g. when using mod_pubcookie for authentication. mod_pubcookie returns
+      userids like "geek@ANDREW.CMU.EDU" (e.g. the Kerberos domain is part of
+      the id). Thanks to Brian E. Gallew for his patch, which we used for
+      inspiration for user autocreation changes.
 
 Version 1.5.0beta4:
   Fixes:
